{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 198,
  "lineage": "0de4f9d2-28bf-d4e4-3bc3-9a3a97dbf4bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b8a53b12fd66ba7",
            "arn": "arn:aws:ec2:us-west-1:798503989779:instance/i-0eba04a55c5f447b7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eba04a55c5f447b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0885f6547cef61566",
            "private_dns": "ip-192-168-0-183.us-west-1.compute.internal",
            "private_ip": "192.168.0.183",
            "public_dns": "ec2-54-67-18-226.us-west-1.compute.amazonaws.com",
            "public_ip": "54.67.18.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aed716518bd0e321",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db0d33239355aed2",
            "tags": {
              "Name": "Ansible",
              "Project": "awsAnsible"
            },
            "tags_all": {
              "Name": "Ansible",
              "Project": "awsAnsible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0979b569ad731e486"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu",
            "aws_key_pair.public",
            "aws_security_group.administration"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b8a53b12fd66ba7",
            "arn": "arn:aws:ec2:us-west-1:798503989779:instance/i-0deaf598fabeeafa3",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0deaf598fabeeafa3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cbcf2f8daca9c562",
            "private_dns": "ip-192-168-0-239.us-west-1.compute.internal",
            "private_ip": "192.168.0.239",
            "public_dns": "ec2-54-183-223-51.us-west-1.compute.amazonaws.com",
            "public_ip": "54.183.223.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a95c4ae4e648ecb4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db0d33239355aed2",
            "tags": {
              "Name": "server",
              "Project": "awsAnsible"
            },
            "tags_all": {
              "Name": "server",
              "Project": "awsAnsible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0979b569ad731e486"
            ]
          },
          "dependencies": [
            "aws_key_pair.public",
            "aws_security_group.administration",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b8a53b12fd66ba7",
            "arn": "arn:aws:ec2:us-west-1:798503989779:instance/i-0b2889cb07e99e9d2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b2889cb07e99e9d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07746b5f4c70a8f8a",
            "private_dns": "ip-192-168-0-88.us-west-1.compute.internal",
            "private_ip": "192.168.0.88",
            "public_dns": "ec2-3-101-24-181.us-west-1.compute.amazonaws.com",
            "public_ip": "3.101.24.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ee51bff48cfbf67b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db0d33239355aed2",
            "tags": {
              "Name": "server",
              "Project": "awsAnsible"
            },
            "tags_all": {
              "Name": "server",
              "Project": "awsAnsible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0979b569ad731e486"
            ]
          },
          "dependencies": [
            "aws_key_pair.public",
            "aws_security_group.administration",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b8a53b12fd66ba7",
            "arn": "arn:aws:ec2:us-west-1:798503989779:instance/i-0c8fd79d8e27c573b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8fd79d8e27c573b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cd0d063f052dd5a3",
            "private_dns": "ip-192-168-0-108.us-west-1.compute.internal",
            "private_ip": "192.168.0.108",
            "public_dns": "ec2-54-193-178-15.us-west-1.compute.amazonaws.com",
            "public_ip": "54.193.178.15",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01bf0ca11007d84bf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db0d33239355aed2",
            "tags": {
              "Name": "server",
              "Project": "awsAnsible"
            },
            "tags_all": {
              "Name": "server",
              "Project": "awsAnsible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0979b569ad731e486"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "aws_key_pair.public",
            "aws_security_group.administration",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b8a53b12fd66ba7",
            "arn": "arn:aws:ec2:us-west-1:798503989779:instance/i-0a921abe847f0719a",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a921abe847f0719a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09854885bc6c0d4db",
            "private_dns": "ip-192-168-0-238.us-west-1.compute.internal",
            "private_ip": "192.168.0.238",
            "public_dns": "ec2-204-236-153-154.us-west-1.compute.amazonaws.com",
            "public_ip": "204.236.153.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03b33877476521168",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db0d33239355aed2",
            "tags": {
              "Name": "server",
              "Project": "awsAnsible"
            },
            "tags_all": {
              "Name": "server",
              "Project": "awsAnsible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0979b569ad731e486"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "aws_key_pair.public",
            "aws_security_group.administration",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:798503989779:internet-gateway/igw-0c94bc2cb4c1a82c4",
            "id": "igw-0c94bc2cb4c1a82c4",
            "owner_id": "798503989779",
            "tags": {
              "Name": "internet-gatway",
              "Project": "Ansible"
            },
            "tags_all": {
              "Name": "internet-gatway",
              "Project": "Ansible"
            },
            "vpc_id": "vpc-00d62ffb0fe3f9bb5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "IG_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:798503989779:route-table/rtb-0bcd8a566cc95937c",
            "id": "rtb-0bcd8a566cc95937c",
            "owner_id": "798503989779",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c94bc2cb4c1a82c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "IG-route-table",
              "Project": "Ansible"
            },
            "tags_all": {
              "Name": "IG-route-table",
              "Project": "Ansible"
            },
            "vpc_id": "vpc-00d62ffb0fe3f9bb5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_routetable_to_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08439720684f43c76",
            "route_table_id": "rtb-0bcd8a566cc95937c",
            "subnet_id": "subnet-0db0d33239355aed2"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.IG_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "administration",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:798503989779:security-group/sg-0979b569ad731e486",
            "description": "Allow port 22 and icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0979b569ad731e486",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "administration",
            "name_prefix": "",
            "owner_id": "798503989779",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "administration",
              "Project": "Ansible"
            },
            "tags_all": {
              "Name": "administration",
              "Project": "Ansible"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d62ffb0fe3f9bb5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:798503989779:subnet/subnet-0db0d33239355aed2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0db0d33239355aed2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "798503989779",
            "tags": {
              "Name": "public-subnet",
              "Project": "Ansible"
            },
            "tags_all": {
              "Name": "public-subnet",
              "Project": "Ansible"
            },
            "vpc_id": "vpc-00d62ffb0fe3f9bb5"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:798503989779:vpc/vpc-00d62ffb0fe3f9bb5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-016c9b1322435e232",
            "default_route_table_id": "rtb-097e37834bc091e66",
            "default_security_group_id": "sg-0e2e5f57a4a281fbc",
            "dhcp_options_id": "dopt-0a97583cd434a500a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00d62ffb0fe3f9bb5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-097e37834bc091e66",
            "owner_id": "798503989779",
            "tags": {
              "Name": "vpc-ansible",
              "Project": "Ansible"
            },
            "tags_all": {
              "Name": "vpc-ansible",
              "Project": "Ansible"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}